Initialized fronted app and added some endpoints for registering users

--- a/Server/Cybersecurity/Cybersecurity.API/Cybersecurity.API.csproj
+++ b/Server/Cybersecurity/Cybersecurity.API/Cybersecurity.API.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Cybersecurity.Database\Cybersecurity.Database.csproj" />
+      <ProjectReference Include="..\Cybersecurity.Services\Cybersecurity.Services.csproj" />
     </ItemGroup>
 
 </Project>
