--- a/App/application/package.json
+++ b/App/application/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.55.0",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
