--- a/App/application/package.json
+++ b/App/application/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^1.1.3",
+    "bcc-common-components": "^1.0.6",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-scripts": "5.0.0",
     "sass": "^1.55.0",
     "typescript": "^4.5.4",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.4.2",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
